# pywebrtc

./: .gitignore  .websocket_client_sync.cpp.swp  CMakeLists.txt  Makefile.am  README.md  conductor.cc  conductor.h  configure.ac  main.cc  rtc.cc  sample.cc  sourceme.sh  test.py  websocket_client_sync.cpp  websocket_offer.cpp  working_main.cc
fakewebcam/: README.md  fake_webcam.sh
m4/: hdf5.m4  python.m4
python/: Makefile.am  setup.py
python/pywebrtc/: #connection.py#  __init__.py  connection.py
python/pywebrtc/src/: pywebrtc.cc
src/: Makefile.am  common.hh  connection.hh  libwebrtc_hl.cc  libwebrtc_hl.hh  runnable.cc  runnable.hh  test_webrtc.cc
